Bug 148926 - FILEOPEN PPTX: Incorrect position of line connectors
Summary: FILEOPEN PPTX: Incorrect position of line connectors
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords: bibisected, bisected, implementationError
Depends on:
Blocks: PPTX-line-connector-import
  Show dependency treegraph
 
Reported: 2022-05-04 11:16 UTC by Xisco Faulí
Modified: 2024-02-20 01:10 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (320.39 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-05-04 11:16 UTC, Xisco Faulí
Details
Comparison LibreOffice 7.4 master and PP 2016 (371.41 KB, image/png)
2022-05-04 11:17 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-05-04 11:16:42 UTC
Created attachment 179915 [details]
sample file

Steps to reproduce:
1. Open attached document

-> See the line connectors. See comparison

Reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 75fe4051320ef9b1f4323fa958e8df3db2066882
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2022-05-04 11:17:03 UTC
Created attachment 179916 [details]
Comparison LibreOffice 7.4 master and PP 2016
Comment 2 Xisco Faulí 2022-05-04 11:18:09 UTC
Regression introduced by:

author	Tibor Nagy <nagy.tibor2@nisz.hu>	2022-03-10 08:42:12 +0100
committer	László Németh <nemeth@numbertext.org>	2022-03-29 16:12:45 +0200
commit cbf66ec3e60d07efb7c3cceed9b4f0fb4f0510c8 (patch)
tree c7e02c1e50525e42d7b15d000398631be3c7c697
parent bc601af632861896bdfaa14c96daf1a7ffdfcf71 (diff)
tdf#89449 PPTX import: fix line connectors

Bisected with: bibisect-linux64-7.4

Adding Cc: to Tibor Nagy
Comment 3 Xisco Faulí 2022-05-27 08:50:36 UTC
Still reproducible in

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: a8df5c815c8b002b7083b8777e3dd8beac573bf3
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 4 Gerald Pfeifer 2022-08-04 23:04:36 UTC
Is this the same as bug#149756 ?
Comment 5 Commit Notification 2022-10-27 18:24:36 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eec48130271188cab63665acedbabf1ff5e850a2

tdf#148926 tdf#151678 PPTX import: position of standard connector - part1

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2022-10-28 06:56:04 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 02db1642c9ce4394f4f85755c4a0a831e547e4fb
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 7 Commit Notification 2022-11-02 10:14:33 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/66806942e246b5aa72677807e1a290e4bbf6bcea

tdf#148926 tdf#151678 PPTX import: position of standard connector - part1

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.